refactor: replace Java 21 methods with backward compatible alternatives